--- a/things_i_bought/Gemfile
+++ b/things_i_bought/Gemfile
@@ -1,6 +1,8 @@
 source 'http://rubygems.org'
 
 gem 'rails', '3.1.0'
+gem 'rspec'
+gem 'cucumber'
 
 # Bundle edge Rails instead:
 # gem 'rails',     :git => 'git://github.com/rails/rails.git'
